name:           gitit-maps
version:        0.1
synopsis:       Plugins for embedding Google Maps in Gitit pages
license:        BSD3
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Data
cabal-version:  >= 1.6
build-type:     Simple
homepage:       http://github.com/duairc/gitit-maps
bug-reports:    http://github.com/duairc/gitit-maps/issues

extra-source-files:
  CONTRIBUTORS,
  LICENSE

library
  hs-source-dirs:
    src

  exposed-modules:
    Network.Gitit.Plugins.Maps
    Network.Gitit.Plugins.Maps.Preprocess

  build-depends:
    base,
    cgi,
    directory,
    filepath,
    gd,
    gitit,
    happstack-server,
    HTTP,
    mtl,
    network,
    pandoc-types,
    SHA,
    text,
    url,
    xhtml,
    xml

  ghc-options: -Wall

  default-language: Haskell2010

source-repository head
  type:     git
  location: http://github.com/duairc/gitit-maps
